# RTOS_RC_Car

./: .gitignore  .gitmodules  README.md  setup.sh
blink/: CMakeLists.txt  main.c
practice/: README.md
practice/01blinkExternal/: main.c
practice/02motor/: main.c
practice/03motorSpeedControl/: main.c
practice/04radioSignal/: CMakeLists.txt  FreeRTOSConfig.h  dualsense_wireless_controller_HID.txt  main.c
practice/05_2ndMotor/: main.c
practice/06pico_w_blink/: pico_w_blink.c
practice/07pico_w_blink_freertos/: CMakeLists.txt  pico_w_freertos_blink.c
practice/08pico_w_blink_event_group/: lwipopts.h  pico_w_freertos_blink.c
practice/08pico_w_blink_queue/: FreeRTOSConfig.h  btstack_config.h  pico_w_freertos_blink.c
practice/08pico_w_freerots_ble/: CMakeLists.txt
practice/09pico_w_freerots_NO_SYS/: CMakeLists.txt  pico_w_freertos_blink.c
practice/09pico_w_freerots_ble/: CMakeLists.txt  pico_w_freertos_ble.c  pico_w_freertos_blink.c
practice/10pico_w_freertos_ble/: CMakeLists.txt  pico_w_freertos_ble.c
practice/10pico_w_freertos_notify/: pico_w_freertos_blink.c
practice/11pico_w_freertos_ble/: CMakeLists.txt  btstack_config.h  lwipopts.h  pico_w_freertos_ble.c
practice/12pico_w_rx/: CMakeLists.txt  example.c  lwipopts.h  pico_w_freertos_rf.c
practice/blinkExternal/: CMakeLists.txt  FreeRTOSConfig.h  main.c
practice/motor/: CMakeLists.txt  main.c
practice/motorSpeedControl/: main.c
practice/playground/: LED_queue_struct.c
